# crsga

./: .gitignore  CMakeLists.txt  LICENSE  Pipfile  README.md  conanfile.py
CMakeModules/: functions.cmake
applications/: CMakeLists.txt
applications/ga/: CMakeLists.txt  ga.cpp
applications/sa/: CMakeLists.txt  sa.cpp
data/: electric_lines.xyz  electric_lines_and_ground.xyz
examples/: CMakeLists.txt  onemax.cpp
include/crsGA/: Common.hpp  Export.hpp  GeneticAlgorithm.hpp  Logger.hpp  ScopedThread.hpp  SimulatedAnnealing.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp
src/: CMakeLists.txt
src/crsGA/: CMakeLists.txt  Logger.cpp
